# task-tracker

./: README.md  package-lock.json
src/: applet.html  applet.js  index.html  main.js  settings.html  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs  storage.rs
src/lib/: api.js  reminders.js
